[project]
name = "pysubnet"
version = "2.0.0"
description = "Deploy a substrate permissioned network using python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Abhishek Shah", email = "abhishekshah3@gmail.com" }]
license = "Apache-2.0"

dependencies = [
    "docker>=7.1.0",
    "eth-hash[pysha3]>=0.7.1",
    "eth-keys>=0.7.0",
    "eth-utils>=5.2.0",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
    "tomli>=2.2.1",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
license.text = "Apache-2.0"

[project.scripts]
pysubnet = "pysubnet.main:main"

[project.urls]
homepage = "https://github.com/weezy20/pysubnet"
repository = "https://github.com/weezy20/pysubnet"
